--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -118,7 +118,7 @@
     <a href="#"><i class="fas fa-user-slash"></i> Clientes Indesejáveis</a>
     <a href="#"><i class="fas fa-sticky-note"></i> Anotações Importante</a>
     <a href="#"><i class="fas fa-file-alt"></i> Relatórios</a>
-    <a href="#"><i class="fas fa-cogs"></i> Configurações</a>
+    <a href="configuracoes.html"><i class="fas fa-cogs"></i> Configurações</a>
   </aside>
 
   <div class="main">
