--- a/infosys_dashboard.html
+++ b/infosys_dashboard.html
@@ -130,7 +130,7 @@
           <span><strong>JULIANA PEREIRA DA SILVA TEDESCO</strong></span>
         </div>
         <div class="user-dropdown" id="dropdown">
-          <a href="gerenciar_conta.html">Gerenciar conta</a>
+          <a href="gerenciar-conta.html">Gerenciar conta</a>
           <a href="#">Sair</a>
         </div>
       </div>
