--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login – Sistema Idealize</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     :root {
       --azul: #36b6ff;
