--- a/alterar-senha.html
+++ b/alterar-senha.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Trocar senha – InfoSys</title>
+<link rel="icon" type="image/png" href="favicon.png">
 <style>
 :root{--azul:#36b6ff;--rosa:#eb0d9f;--cinza-bg:#f6f8fa;--cinza-borda:#d0d7de}
 *{box-sizing:border-box;font-family:"Helvetica Neue",Arial,sans-serif}
