--- a/usuarios.html
+++ b/usuarios.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Usuários - InfoSys</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
@@ -13,14 +13,12 @@
       --cinza-borda: #ccc;
       --cinza-texto: #333;
     }
-
     body {
       font-family: Arial, sans-serif;
       background: var(--cinza-claro);
       margin: 0;
       padding: 2rem;
     }
-
     .container {
       max-width: 1000px;
       margin: 0 auto;
@@ -29,28 +27,23 @@
       padding: 2rem;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
     h2 {
       color: var(--azul);
       margin-bottom: 1.5rem;
     }
-
     table {
       width: 100%;
       border-collapse: collapse;
     }
-
     th, td {
       padding: 0.8rem;
       text-align: left;
       border-bottom: 1px solid var(--cinza-borda);
     }
-
     th {
       background-color: #e6f6ff;
       color: var(--cinza-texto);
     }
-
     .acoes span {
       display: inline-block;
       margin-right: 10px;
@@ -60,7 +53,6 @@
       cursor: pointer;
       font-size: 0.85rem;
     }
-
     .modal {
       display: none;
       position: fixed;
@@ -73,38 +65,32 @@
       align-items: center;
       z-index: 1000;
     }
-
     .modal-content {
       background: white;
       padding: 2rem;
       border-radius: 8px;
       width: 300px;
     }
-
     .modal-content h3 {
       margin-top: 0;
       color: var(--azul);
     }
-
     .modal-content label {
       display: block;
       margin-top: 1rem;
       font-weight: bold;
     }
-
     .modal-content select,
     .modal-content button {
       width: 100%;
       padding: 0.5rem;
       margin-top: 0.5rem;
     }
-
     .modal-content .actions {
       display: flex;
       justify-content: space-between;
       margin-top: 1.5rem;
     }
-
     .modal-content .actions button {
       width: 48%;
       border: none;
@@ -112,11 +98,9 @@
       font-weight: bold;
       cursor: pointer;
     }
-
     .cancelar {
       background-color: #ccc;
     }
-
     .salvar {
       background-color: var(--azul);
       color: white;
@@ -170,7 +154,13 @@
       corpo.innerHTML = "<tr><td colspan='5'>Carregando...</td></tr>";
 
       try {
-        const response = await fetch("https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec?action=listar");
+        const url = "https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec";
+
+        const response = await fetch(url, {
+          method: "POST",
+          body: new URLSearchParams({ action: "listar" })
+        });
+
         const dados = await response.json();
         const nivelAtual = localStorage.getItem("nivel");
 
