--- a/usuarios.html
+++ b/usuarios.html
@@ -19,6 +19,16 @@
       margin: 0;
       padding: 2rem;
     }
+    .topbar {
+      background-color: var(--rosa);
+      color: white;
+      padding: 1rem 2rem;
+      border-radius: 8px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
     .container {
       max-width: 1000px;
       margin: 0 auto;
@@ -108,6 +118,11 @@
   </style>
 </head>
 <body>
+  <div class="topbar">
+    <h1>Gestão de Usuários</h1>
+    <span id="nome-usuario"><strong>Carregando...</strong></span>
+  </div>
+
   <div class="container">
     <h2>Usuários Cadastrados</h2>
     <table>
@@ -149,14 +164,14 @@
   </div>
 
   <script>
+    const URL_API = "https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec";
+
     async function carregarUsuarios() {
       const corpo = document.getElementById("corpo-tabela");
       corpo.innerHTML = "<tr><td colspan='5'>Carregando...</td></tr>";
 
       try {
-        const url = "https://script.google.com/macros/s/AKfycbzC8tQ3bTO2a69FyImqQu5WLF8Nj_y0xWzQ6oRURB1WlVHWX_bTVX-ENwvCBstEYsxE/exec";
-
-        const response = await fetch(url, {
+        const response = await fetch(URL_API, {
           method: "POST",
           body: new URLSearchParams({ action: "listar" })
         });
@@ -216,7 +231,38 @@
       alert(`Excluir: ${email} (função ainda não implementada).`);
     }
 
+    async function carregarNomeUsuario() {
+      const token = localStorage.getItem("token");
+      const spanNome = document.getElementById("nome-usuario");
+
+      const nomeLocal = localStorage.getItem("nome_usuario");
+      if (nomeLocal) {
+        spanNome.innerHTML = `<strong>${nomeLocal}</strong>`;
+      }
+
+      if (!token) return;
+
+      try {
+        const resposta = await fetch(URL_API, {
+          method: "POST",
+          headers: { "Content-Type": "application/x-www-form-urlencoded" },
+          body: new URLSearchParams({ action: "usuario", token })
+        });
+
+        const texto = await resposta.text();
+        if (texto.startsWith("{")) {
+          const dados = JSON.parse(texto);
+          const nome = dados.nome?.trim() || dados.email;
+          spanNome.innerHTML = `<strong>${nome}</strong>`;
+          localStorage.setItem("nome_usuario", nome);
+        }
+      } catch (erro) {
+        console.error("Erro ao carregar nome:", erro);
+      }
+    }
+
     carregarUsuarios();
+    carregarNomeUsuario();
   </script>
 </body>
 </html>
